switched positions of forecast text and icon to take advantage of whitespace, changed grid column sizes to prevent icon from leaving content box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@
     display:grid;
     column-gap:.5em;
     row-gap:.5em;
-    grid-template-columns:20% 80%;
+    grid-template-columns:65% 20%;
 }
 
 .forecastCard img {
